--- a/presentation.tex
+++ b/presentation.tex
@@ -23,6 +23,8 @@
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage{pgf,pgffor} 
+\usepackage{tikz}
+\usetikzlibrary{arrows}
 
 \lstdefinestyle{base}{  breaklines=true,
                     basicstyle=\footnotesize,
