--- a/diapositivas por venir.tex
+++ b/diapositivas por venir.tex
@@ -29,3 +29,32 @@ package Circuits
 end Circuits;   
 \end{lstlisting}
 \end{frame}
+
+
+
+$\langle \textit{lc\_p2[i]},\textit{lc\_p3[i + 1]} \rangle$ en 1:N-1.\\
+ 
+$\langle  \textit{gr\_p} , \textit{lc\_p1} \rangle$ en $1:N-1$. 
+$\langle \textit{gr\_p}, \textit{lc\_p1},\textit{lc\_p2} \rangle$  en $N$. 
+
+
+\begin{lstlisting}[style=base]
+	for i in 1:N - 1 loop
+		lc_p2_v[i] = lc_p3_v[i + 1];
+		lc_p2_i[i] + lc_p3_i[i + 1] = 0;
+	end for;
+\end{lstlisting}
+
+\begin{lstlisting}[style=base]
+for i in 1:N - 1 loop
+    gr_p_v[i] = lc_p1_v[i];
+    gr_p_i[i] + lc_p1_i[i] = 0;
+end for;
+\end{lstlisting}
+
+
+\begin{lstlisting}[style=base]
+gr_p_v[N] = lc_p1_v[N];  
+gr_p_v[N] = lc_p2_v[N];
+gr_p_i[N] + lc_p2_i[N] + lc_p2_i[N] = 0;
+\end{lstlisting}
